# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: cli.py  config_diff.py  file_opener.py  file_reader.py  generate_diff.py  parser.py
gendiff/formaters/: __init__.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
